--- a/src/components/Summary/Summary.css
+++ b/src/components/Summary/Summary.css
@@ -6,3 +6,15 @@
   border: "1px solid black";
   margin: "20px 0";
 }
+.lineSmall {
+  border: "1px solid black";
+  margin: "20px 0";
+  width: 70%;
+  margin-left: 0;
+}
+.lineSmallRight {
+  border: "1px solid black";
+  margin: "20px 0";
+  width: 70%;
+  margin-right: 0;
+}
