Added some small finishing touches. It's ready

--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -1,3 +1,11 @@
 .titleRight {
   width: 70%;
 }
+.educationWrapper {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
