--- a/src/components/WorkExperience/WorkExperience.css
+++ b/src/components/WorkExperience/WorkExperience.css
@@ -17,5 +17,5 @@
   flex-direction: row;
   align-content: center;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
